added caps for selenoid

--- a/src/test/resources/config/config.qa.properties
+++ b/src/test/resources/config/config.qa.properties
@@ -1,6 +1,6 @@
 browser = chrome
-#browserversion = 
-#testname = 
+browserversion = 
+testname = 
 url = https://naveenautomationlabs.com/opencart/index.php?route=account/login
 
 headless = false
